# SeDriCa-BatMobile-FINAL

./: README.md
Cad Models/: Cannon.stl
Cad Models/F3Z Type/: Bullet.f3d  Cannon.f3z
Cad Models/STL Type/: Bullet.stl
nvidia-jetson/Perception/FINAL/: InferenceAndCommunication.py
nvidia-jetson/Perception/TESTING/cuda-testing/: aryanprocessing.py  convert_trt.py  detect_trt.py  fileee.py  optimized_inference.py  optimized_inference_shivam.py  perception.py  perceptionshivam.py  perceptionworkingbackup.py
nvidia-jetson/Perception/TESTING/src/batmobile_perception/: setup.py
rpi/WASD/: FINALWSAD.py
rpi/WASD/TESTING/: controls_v1.py  test.py  wsadcontrol.py
rpi/src/comm/: package.xml  setup.py
rpi/src/comm/comm/: comm_pub.py
rpi/src/controls/: .sevotheta.py.swp  package.xml  servomotor.py  setup.py
rpi/src/controls/controls/: controls_v2.py
rpi/src/mp/: CMakeLists.txt  package.xml
rpi/src/mp/src/: coordinatesreceiverv1.cpp  coordinatesreceiverv2.cpp  coordinatesreceiverv3.cpp  coordinatesreceiverv4.cpp
simulations/: astar.py
simulations/gazebo_car_simulation/: CMakeLists.txt  package.xml  path.csv
simulations/gazebo_car_simulation/include/: pid.hpp  trajectory_generator.hpp
simulations/gazebo_car_simulation/launch/: bridge.launch.py  sim.launch.py
simulations/gazebo_car_simulation/models/: gui.config  thecarandworld.sdf
simulations/gazebo_car_simulation/src/: pid.cpp  pid_local_pub.cpp  pid_steer_publisherlocal.cpp  pid_steer_publisherv1.cpp  pid_steer_publisherv2.cpp  pid_steer_publisherv3.cpp  trajectory_generator.cpp  v2backup.cpp
(+6 files in other folders)
